examples/test/testpolicy327.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy327
  namespace: namespace360
spec:
  podSelector:
    matchLabels:
      key34: value37
      key21: value31
      key5: value31
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key22: value4
      podSelector:
        matchLabels:
          key40: value40
          key48: value6
          key11: value7
